<resources>
    <string name="app_name">Pets</string>
    <string name="myService">IntentService</string>
    <string name="vaccinated_label_text">Vaccinated</string>
    <string name="not_vaccinated_label_text">Not vaccinated</string>
    <string name="no_connection_text">Internet connection not available</string>
    <string name="main_activity_start_btn_text">START</string>
    <string name="main_activity_add_pet_btn_text">Add pet</string>
    <string name="main_activity_list_pets_btn_text">SHOW PETS</string>
    <string name="main_activity_normal_program_label_text">MAIN APP</string>
    <string name="main_activity_scraper_program_label_text">SCRAPER</string>
    <string name="main_view_empty_list_view_text">No data available</string>
    <string name="pet_list_activity_num_processes_label_text">Processing:</string>
    <string name="pet_list_activity_num_event_label_text">Events:</string>
    <string name="pet_list_activity_launch_app_button_text">RUN</string>
    <string name="start_service_button_text">RUN</string>
    <string name="stop_service_button_text">STOP</string>
    <string name="notification_title">Pets</string>
    <string name="notification_description">New pet requested!</string>
    <string name="numReceivedLabel">Number of notifications received:</string>
    <string name="bad_parameters_text">An error occurred with the parameters given</string>
    <string name="limit_error_text">Lower limit value must be less than the upper limit value</string>
    <string name="request_error_text">An error occurred while requesting the given data from URL</string>
    <string name="scraper_pet_list_activity_load_new_pets_button_text">Load</string>
    <string name="scraper_pet_list_activity_exit_new_pets_button_text">Exit</string>
    <string name="scraper_pet_list_activity_min_limit_label_text">Lower limit:</string>
    <string name="scraper_pet_list_activity_max_limit_label_text">Upper limit:</string>
    <string name="scraper_pet_list_activity_min_limit">10</string>
    <string name="scraper_pet_list_activity_max_limit">50</string>
    <string name="scraper_add_pet_activity_name_label_text">Pet name:</string>
    <string name="scraper_add_pet_activity_owner_label_text">Owner name:</string>
    <string name="scraper_add_pet_activity_type_label_text">Type</string>
    <string name="scraper_add_pet_activity_vaccinated_label_text">Is vaccinated?</string>
    <string name="scraper_add_pet_activity_date_label_text">Adoption date</string>
    <string name="scraper_add_pet_activity_dog_text">Dog</string>
    <string name="scraper_add_pet_activity_bird_text">Bird</string>
    <string name="scraper_add_pet_activity_cat_text">Cat</string>
    <string name="scraper_add_pet_activity_other_text">Other</string>
    <string name="scraper_add_pet_activity_change_date_text">Change date</string>
    <string name="scraper_add_pet_activity_comment_label_text">Comment (optional):</string>
    <string name="scraper_add_pet_activity_add_button_text">ADD</string>
    <string name="scraper_add_pet_activity_exit_button_text">EXIT</string>
</resources>