<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:padding="40dp"
    tools:context=".activities.scraper.ScraperAddPetActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/progressBarScraperAddLoading"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone"
                    android:layout_weight="1" />

                <ListView
                    android:id="@+id/petListViewAddScraperList"
                    android:layout_width="match_parent"
                    android:padding="10dp"
                    android:layout_height="240dp"
                    android:visibility="visible"></ListView>

                <TextView
                    android:id="@+id/emptyScraperAddTextView"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_view_empty_list_view_text" />
            </RelativeLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/scraperAddPetNameTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/scraper_add_pet_activity_name_label_text" />

                    <EditText
                        android:id="@+id/scraperAddPetNameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/scraperAddPetOwnerTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/scraper_add_pet_activity_owner_label_text" />

                    <EditText
                        android:id="@+id/scraperAddPetOwnerEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/scraperAddPetTypeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/scraper_add_pet_activity_type_label_text" />

                    <RadioGroup
                        android:id="@+id/scraperAddPetTypeRadioGroup"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <RadioButton
                            android:id="@+id/dogRadioButton"
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:layout_weight="1"
                            android:text="@string/scraper_add_pet_activity_dog_text"
                            android:checked="true"/>
                        <RadioButton
                            android:id="@+id/birdRadioButton"
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:layout_weight="1"
                            android:text="@string/scraper_add_pet_activity_bird_text" />
                        <RadioButton
                            android:id="@+id/catRadioButton"
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:layout_weight="1"
                            android:text="@string/scraper_add_pet_activity_cat_text" />
                        <RadioButton
                            android:id="@+id/otherRadioButton"
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:layout_weight="1"
                            android:text="@string/scraper_add_pet_activity_other_text" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/scraperAddPetTypeCheckbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/scraper_add_pet_activity_vaccinated_label_text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/scraperAddPetDateTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/scraper_add_pet_activity_date_label_text"
                            android:gravity="left"/>

                        <TextView
                            android:id="@+id/dateTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:layout_weight="1"
                            android:gravity="right"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/changeDateButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="changeDate"
                            android:layout_marginRight="7dp"
                            android:text="@string/scraper_add_pet_activity_change_date_text" />

                </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/scraperAddPetCommentTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/scraper_add_pet_activity_comment_label_text" />

                    <EditText
                        android:id="@+id/scraperAddPetCommentEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/scrapeAddPetButton"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:onClick="addPet"
                    android:text="@string/scraper_add_pet_activity_add_button_text" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:onClick="exit"
                    android:text="@string/scraper_add_pet_activity_exit_button_text" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>