<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:padding="40dp"
    tools:context=".activities.scraper.ScraperListPetsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/progressBarScraperListLoading"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone"
                    android:layout_weight="1" />

                <ListView
                    android:id="@+id/petListViewScraperList"
                    android:layout_width="match_parent"
                    android:layout_height="320dp"
                    android:padding="10dp"
                    android:visibility="visible"></ListView>

                <TextView
                    android:id="@+id/emptyScraperListTextView"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_view_empty_list_view_text" />
            </RelativeLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/scrapeNewPetsButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="scrapeListPets"
                    android:text="@string/scraper_pet_list_activity_load_new_pets_button_text" />

                <Button
                    android:id="@+id/exitListPetsButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="exit"
                    android:text="@string/scraper_pet_list_activity_exit_new_pets_button_text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/scraper_pet_list_activity_min_limit_label_text" />

                    <EditText
                        android:id="@+id/minLimitEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/scraper_pet_list_activity_min_limit"
                        android:inputType="number" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/scraper_pet_list_activity_max_limit_label_text" />

                    <EditText
                        android:id="@+id/maxLimitEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/scraper_pet_list_activity_max_limit"
                        android:inputType="number" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>