<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".activities.PetListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:orientation="vertical">

            <Button
                android:id="@+id/runEventsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="runEventsService"
                android:text="@string/pet_list_activity_launch_app_button_text"></Button>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/textLabelsCounterLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/pet_list_activity_num_event_label_text"></TextView>

                <TextView
                    android:id="@+id/numEventsTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="left"
                    android:layout_weight="1"></TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/pet_list_activity_num_processes_label_text"></TextView>

                <TextView
                    android:id="@+id/numProcessesTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="left"
                    android:layout_weight="1"></TextView>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBarLoading"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"
                android:layout_weight="1" />

            <ListView
                android:id="@+id/petListView"
                android:layout_width="fill_parent"
                android:gravity="left"
                android:layout_height="600dp"
                android:textSize="13dp"
                android:scrollbars="horizontal|vertical"/>

            <TextView
                android:id="@+id/emptyTextView"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_view_empty_list_view_text" />
        </RelativeLayout>
    </HorizontalScrollView>

</LinearLayout>